[gd_scene load_steps=5 format=3 uid="uid://b1kbidmp44j1b"]

[ext_resource type="Script" uid="uid://c00svfa85u66r" path="res://magnet_vol2/radial_magnet/radial_particles.gd" id="1_3wn0k"]
[ext_resource type="Material" uid="uid://duma6x74gg72f" path="res://magnet_vol2/radial_magnet/outer_rim.tres" id="2_8pl5v"]
[ext_resource type="Material" uid="uid://bdhqe603jkeyr" path="res://magnet_vol2/radial_magnet/left_particles.tres" id="3_geqf6"]
[ext_resource type="Material" uid="uid://bvh6nr7cv40ay" path="res://magnet_vol2/radial_magnet/right_particles.tres" id="4_0stpr"]

[node name="RadialParticles" type="Node2D"]
script = ExtResource("1_3wn0k")

[node name="OuterRim" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
amount = 20
process_material = ExtResource("2_8pl5v")

[node name="InnerParticlesLeft" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
visible = false
amount = 40
preprocess = 1.0
process_material = ExtResource("3_geqf6")

[node name="InnerParticlesRight" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
amount = 40
preprocess = 1.0
process_material = ExtResource("4_0stpr")
